# SeldeGram

./: .gitignore  README.md  gh-deploy  gh-deploy.pub  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: deploy.yml
desktop/: .gitignore  README.md  package.json
desktop/scripts/: make-portable.mjs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: allow-app-commands.toml  hide-window.toml  is-maximized-window.toml  minimize-window.toml  quit-app.toml  set-unread-count.toml  show-window.toml  start-dragging-window.toml  toggle-maximize-window.toml  toggle-window.toml  vpn.toml
desktop/src-tauri/src/: lib.rs  main.rs  vpn.rs
docker/: docker-compose.yml
docs/: coturn-setup.md
landing/: package-lock.json
landing/app/: globals.css  layout.tsx  page.tsx
mobile/: .easignore  App.tsx  app.json  eas.json  google-services.json  package-lock.json  package.json
mobile/scripts/: make-icons.mjs
mobile/src/: api.ts  config.ts  crypto.ts  helpers.ts  keys.ts  media.ts  navigation.ts  push.ts  theme.ts  types.ts  wallpapers.ts  wallpapersSvg.ts
scripts/: setup-turn.sh
seldegram/: package-lock.json  package.json
server/: .env.example  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.module.ts  health.controller.ts  main.ts
shared/: package.json  wallpapers-svg.ts
shared/src/: index.ts
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AudioPlayer.tsx  Avatar.tsx  BlockListModal.tsx  CallOverlay.tsx  (+26 more)
(+130 files in other folders)
