[package]
name = "crabogram-desktop"
version = "1.0.0"
description = "CraboGram desktop client"
authors = ["CraboGram"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "crabogram_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
